Admin Area lavora anche senza JS

--- a/html/admin/inserisciRisultati.html
+++ b/html/admin/inserisciRisultati.html
@@ -4,6 +4,10 @@
 <head>
   <title>Inserisci risultati gara</title> <!-- nitrito hihihihi -->
   <meta name="title" content="inserisci-risultati-gara" />
+  <noscript>
+    <style>html{display:none;}</style>
+    <meta http-equiv="refresh" content="0.0;url=inserisciRisultatiNoJs.html">
+  </noscript>
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
@@ -37,7 +41,6 @@
     <lista-gare />
     <inserimento-gara-selezionata />
   </section>
-  <p><a href="../../php/Admin/inserisciRisultati.php">Torna ai risultati</a></p>
   <footer>
     <img id="img-valid-code" src="images/valid-xhtml10.png" alt="HTML valido" />
     <img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido" /> <!-- cambiare src dopo aver validato -->
