--- a/html/autenticazione/login.html
+++ b/html/autenticazione/login.html
@@ -10,55 +10,28 @@
 </head>
 <body>
 	<header>
-		<nav class="navTop">
-			<div class="nav-bg"></div>
-			<h1 lang="en">Home</h1>
-			<h1> > </h1>
-			<h1>Login</h1>
+    <nav class="navTop">
+      <div class="nav-bg"></div>
+      <h1 lang="en">Home</h1>
+      <h1> > </h1>
+      <h1>Risultati gare</h1>
 
-			<ul>
-				<li lang="en"><a href="../../index.php">Home</a></li>
-				<li><a href="../../php/Scommetti/scommetti.php">Scommesse</a></li>
-				<li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
-				<li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
-				<li><a> / </a></li>
-				<li><a href='../../php/Autenticazione/register.php'>Registrati</a></li>
-			</ul>
-		</nav>
-	</header>
-	<div class="init">
+      <ul>
+        <li lang="en"><a href="../../index.php">Home</a></li>
+        <li><a href="../../php/Scommetti/scommetti.php">Scommesse</a></li>
+        <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
+        <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+        <li><a> / </a></li>
+        <li><a href='../../php/Autenticazione/register.php'>Registrati</a></li>
+      </ul>
+    </nav>
+  </header>
+	<form method="post" name="Form" action="login.php">
 		<h1>Login</h1>
-	</div>
-	<div class="wrapper">
-		<div class="wrap">
-			<form class="form" method="post" name="Form" action="login.php">
-				<label for="username">
-					<span>Username</span><input type="text" id="username" placeholder="Username" name="username" required>
-				</label>
-				<label for="password">
-					<span>Password</span><input type="password" id="password" placeholder="Password" name="password" required>
-				</label>
-				<label>
-					<span> </span><input type="submit" name="login" value="Accedi" />
-				</label>
-			</form>
-		</div>
-	</div>
-	<footer>
-		<div class="content">
-			<div><img class="logo" src="../../images/logo.jpg" alt="Logo"/></div>
-
-			<nav>
-				<ul>
-					<li>Sam</li>
-					<li>Dam</li>
-					<li>Martz</li>
-				</ul>
-			</nav>
-
-		</div>
-		<img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido"/>
-		<img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido"/>
-	</footer>
+		<input type="text" id="username" placeholder="Username" name="username" required>
+		<input type="password" id="password" placeholder="Password" name="password" required>
+		<button type="submit" name="login">Accedi</button>
+	</form>
+	<p><a href="../../"> Torna Indietro </a></p>
 </body>
 </html>
