--- a/html/cavalli/cavalli.html
+++ b/html/cavalli/cavalli.html
@@ -8,57 +8,61 @@
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-  <link rel="stylesheet" type="text/css" href="../../style/base.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="style/small.css" media="" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="../../style/small.css" media="handheld, screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
 </head>
 
 <body>
-  <nav class="navTop">
-    <div class="nav-bg"></div>
-    <h1 lang="en">Home</h1>
-    <h1> > </h1>
-    <h1>Cavalli</h1>
-    <ul>
-      <li><a href="../../">Home</a></li>
-      <li><a href="../Scommetti/scommetti.php">Scommesse</a></li>
-      <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
-      <li><a >Cavalli</a></li>
-      <li><a> / </a></li>
-      <admin />
-      <autenticazione />
-    </ul>
-  </nav>
-
-  <div class="init">
+  <header>
     <h1>I cavalli che corrono nel nostro ippodromo</h1>
-  </div>
+  </header>
 
-  <div class="wrapper">
+  <div class="page">
+    <div class="navbar">
+      <div id="breadcrumb">
+        <ul>
+          <li lang="en">Home</li>
+          <li>Cavalli</li>
+        </ul>
+      </div>
+      <nav id="menu">
+        <ul>
+          <li><a href="../../">Home</a></li>
+          <li><a href="../Scommetti/scommetti.php">Scommesse</a></li>
+          <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
+          <li>Cavalli</li>
+          <li><a href="../chi_siamo.php">Chi siamo</a></li>
+          <admin />
+          <autenticazione />
+        </ul>
+      </nav>
+    </div>
+  
+
+<!--     <div class="wrapper">
     <div class="wrap">
-
+ -->
       <main>
         <lista-cavalli />
       </main>
 
-    </div>
+<!--     </div>
+  </div> -->
+    <footer>
+
+      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
+
+      <ul>
+        <li>Sam</li>
+        <li>Dam</li>
+        <li>Martz</li>
+      </ul>
+
+      <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido" />
+      <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido" />
+    </footer>
   </div>
-  <footer>
-    <div class="content">
-      <div><img class="logo" src="../../images/logo.jpg" alt="Logo"/></div>
-
-      <nav>
-        <ul>
-          <li>Sam</li>
-          <li>Dam</li>
-          <li>Martz</li>
-        </ul>
-      </nav>
-
-    </div>
-    <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido"/>
-    <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido"/>
-  </footer>
 </body>
 
 </html>
