--- a/html/gare/risultati.html
+++ b/html/gare/risultati.html
@@ -8,72 +8,60 @@
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-  <link rel="stylesheet" type="text/css" href="../../style/base.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="style/small.css" media="" />
-  <link rel="stylesheet" type="text/css" href="../../style/base.css" media="print" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="../../style/small.css" media="handheld, screen and (max-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
 </head>
 
 <body>
-  <header>
-    <nav class="navTop">
-      <div class="nav-bg"></div>
-      <h1 lang="en">Home</h1>
-      <h1> > </h1>
-      <h1>Risultati gare</h1>
 
-      <ul>
-        <li lang="en"><a href="../../index.php">Home</a></li>
-        <li><a href="../Scommetti/scommetti.php">Scommesse</a></li>
-        <li><a>Gare</a></li>
-        <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
-        <li><a href="./chi_siamo.php">Chi siamo</a></li>
-        <li><a> / </a></li>
-        <admin />
-        <autenticazione />
-      </ul>
-    </nav>
+  <header>
+    <h1>Gare concluse</h1>
   </header>
 
-  <div class="init">
-    <h1>Gare concluse</h1>
-  </div>
-
-  <div class="wrapper">
-    <div class="wrap">
-      <main>
-        <table>
-          <thead class="norm">
-            <tr>
-              <th scope="col">ID</th>
-              <th scope="col">Giorno</th>
-              <th scope="col">Ora</th>
-            </tr>
-          </thead>
-          <tbody>
-            <lista-gare />
-          </tbody>
-        </table>
-
-      </main>
-
-    </div>
-  </div>
-  <footer>
-    <div class="content">
-      <div><img class="logo" src="../../images/logo.jpg" alt="Logo"/></div>
-
-      <nav>
+  <div class="page">
+    <div class="navbar">
+      <div id="breadcrumb">
+        <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
         <ul>
-          <li>Sam</li>
-          <li>Dam</li>
-          <li>Martz</li>
+          <li lang="en">Home</li>
+          <li>Risultati gare</li>
+        </ul>
+      </div>
+      <nav id="menu">
+        <ul>
+          <li lang="en"><a href="../../">Home</a></li>
+          <li><a href="../Scommetti/scommetti.php">Scommesse</a></li>
+          <li><a>Gare</a></li>
+          <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="../chi_siamo.php">Chi siamo</a></li>
+          <admin />
+          <autenticazione />
         </ul>
       </nav>
-
     </div>
-    <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido"/>
-    <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido"/>
-  </footer>
+
+  
+    <main>
+      <div class="cards">
+        <lista-gare />
+      </div>
+    </main>
+
+    <footer>
+
+      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
+
+      <ul>
+        <li>Sam</li>
+        <li>Dam</li>
+        <li>Martz</li>
+      </ul>
+
+      <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido" />
+      <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido" />
+    </footer>
+  </div>
 </body>
 
 </html>
