--- a/html/cavalli/cavalli.html
+++ b/html/cavalli/cavalli.html
@@ -9,7 +9,8 @@
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
-  <link rel="stylesheet" type="text/css" href="../../style/small.css" media="handheld, screen and (max-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="../../style/small.css"
+    media="handheld, screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
 </head>
 
@@ -20,12 +21,10 @@
 
   <div class="page">
     <div class="navbar">
-      <div id="breadcrumb">
-        <ul>
-          <li lang="en">Home</li>
-          <li>Cavalli</li>
-        </ul>
-      </div>
+      <ul id="breadcrumb">
+        <li lang="en">Home</li>
+        <li>Cavalli</li>
+      </ul>
       <nav id="menu">
         <ul>
           <li><a href="../../">Home</a></li>
@@ -38,17 +37,9 @@
         </ul>
       </nav>
     </div>
-  
-
-<!--     <div class="wrapper">
-    <div class="wrap">
- -->
-      <main>
-        <lista-cavalli />
-      </main>
-
-<!--     </div>
-  </div> -->
+    <main>
+      <lista-cavalli />
+    </main>
     <footer>
 
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
