--- a/html/cavalli/cavalloSelezionato.html
+++ b/html/cavalli/cavalloSelezionato.html
@@ -2,21 +2,26 @@
 <html lang="it">
 
 <head>
-  <title><nome-cavallo /> - Ippodromo NO₂</title>
+  <title>
+    <nome-cavallo /> - Ippodromo NO₂
+  </title>
   <meta-title-cavallo />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
-  <link rel="stylesheet" type="text/css" href="../../style/small.css" media="handheld, screen and (max-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="../../style/small.css"
+    media="handheld, screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
 </head>
 
 <body>
 
   <header>
-    <h1><nome-cavallo /></h1>
+    <h1>
+      <nome-cavallo />
+    </h1>
   </header>
 
   <div class="page">
@@ -25,7 +30,9 @@
         <ul>
           <li lang="en">Home</li>
           <li>Cavalli</li>
-          <li><nome-cavallo /></li>
+          <li>
+            <nome-cavallo />
+          </li>
         </ul>
       </div>
       <nav id="menu">
@@ -39,16 +46,16 @@
           <autenticazione />
         </ul>
       </nav>
-  
+
     </div>
 
     <main>
-        <div class="cards">
-          <info-cavallo />
+      <div class="cards">
+        <info-cavallo />
 
-          <gare-cavallo />
-        </div>
-      </main>
+        <gare-cavallo />
+      </div>
+    </main>
     <footer>
 
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
