--- a/html/gare/garaSelezionata.html
+++ b/html/gare/garaSelezionata.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Classifica gara - Ippodromo NO₂</title>
-  <meta-title-gara />
+  <meta-title-gara /> <!-- TODO aggiornare php non cambia i tag meta -->
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
@@ -20,13 +20,11 @@
 
   <div class="page">
     <div class="navbar">
-      <div id="breadcrumb">
         <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
-        <ul>
+        <ul id="breadcrumb">
           <li lang="en">Home</li>
           <li>Classifica gara <id-gara /></li>
         </ul>
-      </div>
       <nav id="menu">
         <ul>
           <li lang="en"><a href="../../">Home</a></li>
