--- a/html/index.html
+++ b/html/index.html
@@ -17,18 +17,16 @@
   <header>
     <h1>Ippodromo NO₂¯</h1>
   </header>
-  
-  <img class="topPic" src="images/ippopodromo.jpg" alt="vista ippodromo"/>
+
+  <img class="topPic" src="images/ippopodromo.jpg" alt="vista ippodromo" /> <!-- mnettere come contenuto -->
 
   <div class="page">
 
     <div class="navbar">
-      <div id="breadcrumb">
         <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
-        <ul>
+        <ul id="breadcrumb">
           <li lang="en">Home</li>
         </ul>
-      </div>
 
       <nav id="menu">
         <ul>
@@ -40,7 +38,6 @@
           <autenticazione /> <!-- controlla sulla sessione per vedere se aggiungere login/register o logut -->
         </ul>
       </nav>
-      <!-- <img class="logo" src="images/logo.jpeg" alt="Logo" /> -->
     </div>
 
     <main>
@@ -65,7 +62,8 @@
           <dd>
             <img src="images/cookies.jps" alt="Il simbolo della moneta é un bisotto" />
             <!-- non so se vada messa, non é molto di contenuto -->
-            <p>Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario. Otterrai
+            <p>Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario.
+              Otterrai
               non so quanti cookies gratuiti se decidi di registrarti!</p>
           </dd>
         </div>
@@ -73,7 +71,6 @@
     </main>
 
     <footer>
-
       <img class="logo" src="images/logo.jpeg" alt="Logo Ippodromo" />
 
       <ul>
@@ -86,6 +83,7 @@
       <img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido" />
     </footer>
   </div>
+  <!-- TODO aggiungi footer dappertutto -->
 </body>
 
 </html>
