--- a/html/scommesse/scommesseUtente.html
+++ b/html/scommesse/scommesseUtente.html
@@ -16,9 +16,9 @@
 
 <body>
   <header>
-    <h1>Scommesse aperte</h1>
+    <h1>Le mie scommesse</h1>
   </header>
-  
+
   <div class="page">
     <div class="navbar">
       <div id="breadcrumb">
@@ -27,13 +27,13 @@
           <li lang="en">Home</li>
         </ul>
       </div>
-    
+
       <nav id="menu">
         <ul>
           <li lang="en"><a href="../../">Home</a></li>
           <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
           <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
-          <li>Scommesse</li>
+          <li><a href='scommetti.php'>Scommesse</a></li>
           <admin />
           <autenticazione /> <!-- controlla sulla sessione per vedere se aggiungere login/register o logut -->
         </ul>
@@ -58,7 +58,7 @@
         </tbody>
       </table>
 
-      <lista-scommesse />
+      <lista-scommesse-utente />
     </main>
 
     <footer>
