--- a/html/gare/risultati.html
+++ b/html/gare/risultati.html
@@ -9,7 +9,8 @@
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
-  <link rel="stylesheet" type="text/css" href="../../style/small.css" media="handheld, screen and (max-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="../../style/small.css"
+    media="handheld, screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
 </head>
 
@@ -21,13 +22,11 @@
 
   <div class="page">
     <div class="navbar">
-      <div id="breadcrumb">
-        <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
-        <ul>
-          <li lang="en">Home</li>
-          <li>Risultati gare</li>
-        </ul>
-      </div>
+      <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
+      <ul id="breadcrumb">
+        <li lang="en">Home</li>
+        <li>Risultati gare</li>
+      </ul>
       <nav id="menu">
         <ul>
           <li lang="en"><a href="../../">Home</a></li>
@@ -41,7 +40,7 @@
       </nav>
     </div>
 
-  
+
     <main>
       <div class="cards">
         <lista-gare />
