fix di CSS, termine scommesse e storico, inizio gara scommessa

--- a/html/cavalli/cavalloSelezionato.html
+++ b/html/cavalli/cavalloSelezionato.html
@@ -26,15 +26,7 @@
 
   <div class="page">
     <div class="navbar">
-      <div id="breadcrumb">
-        <ul>
-          <li lang="en">Home</li>
-          <li>Cavalli</li>
-          <li>
-            <nome-cavallo />
-          </li>
-        </ul>
-      </div>
+      
       <nav id="menu">
         <ul>
           <li><a href="../../">Home</a></li>
@@ -47,6 +39,11 @@
         </ul>
       </nav>
 
+      <ul id="breadcrumb">
+          <li lang="en">Home</li>
+          <li>Cavalli</li>
+          <li><nome-cavallo /></li>
+      </ul>
     </div>
 
     <main>
