Sistemate garaScommesse (html e php)
Sistemate garaScommesse (html e php)

--- a/html/scommesse/garaScommessa.html
+++ b/html/scommesse/garaScommessa.html
@@ -94,9 +94,7 @@
     <main>
       <credito />
 
-      <form method="post" onsubmit="return checkDoc(<credito />);" action="confirmScommessaGara.php" id="formScommessa">
-
-      </form>
+      <form />
 
     </main>
 
@@ -107,6 +105,7 @@
             <li>Sam</li>
             <li>Dam</li>
             <li>Martz</li>
+			<li>Cecio</li>
           </ul>
 
       <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido" />
