--- a/html/scommesse/garaScommessa.html
+++ b/html/scommesse/garaScommessa.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
 
   <script type="text/javascript">
-      function checkDoc(var userBitSquits)
+      function checkDoc(userBitSquits)
       {
         if(checkBitSquits(userBitSquits) && checkRadio())
         {
@@ -25,7 +25,7 @@
         }
       }
       
-      function checkBitSquits(var userBitSquits)
+      function checkBitSquits(userBitSquits)
       {
         var n = document.getElementsByTagName('input');
         var value;
