Corretto errore in aggiungiCavallo

--- a/html/admin/aggiungiCavallo.html
+++ b/html/admin/aggiungiCavallo.html
@@ -45,7 +45,7 @@
       </form>
       <textarea id="description" rows="4" cols="50" name="descrizione" form="inserimentoCavallo"
         placeholder="Inserire una breve descrizione del cavallo" required></textarea>
-    </section>
+    </main>
     <footer>
       <img id="img-valid-code" src="images/valid-xhtml10.png" alt="HTML valido" />
       <img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido" /> <!-- cambiare src dopo aver validato -->
