minor fixes, aggiunto uno stile per il contenuto scritto dl > dt > dd

--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,8 @@
   <div class="page">
 
     <div class="navbar">
+        <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
+
       <nav id="menu">
         <ul>
           <li lang="en">Home</li>
@@ -35,38 +37,38 @@
       </nav>
       
       <ul id="breadcrumb">
-        <li lang="en">Home</li>
+          <li lang="en">Home</li>
       </ul>
     </div>
 
     <main>
-      <dl id="home-content" class="content">
-        <div class="dl-element left-element">
-          <!-- left/right si puó mettere come id se serve -->
-          <dt>cose ippodromo</dt>
-          <dd>
-            <img src="images/ippodromo.jpg" alt="Vista aerea notturna del nostro ippodromo" />
-            <p>blah blah</p>
-          </dd>
-        </div>
-        <div class="dl-element right-element">
-          <dt>Scommesse</dt>
-          <dd>
-            <img src="images/scommesse.jpg" alt="" /> <!-- non so se vada messa, non é molto di contenuto -->
-            <p>qui puoi fare scommesse in tempo reale ecc. ecc.</p>
-          </dd>
-        </div>
-        <div class="dl-element left-element">
-          <dt>Valuta virtuale: Cookies</dt>
-          <dd>
-            <img src="images/cookies.jps" alt="Il simbolo della moneta é un bisotto" />
-            <!-- non so se vada messa, non é molto di contenuto -->
-            <p>Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario.
-              Otterrai
-              non so quanti cookies gratuiti se decidi di registrarti!</p>
-          </dd>
-        </div>
-      </dl>
+        <dl id="home-content" class="content">
+          <div class="dl-element center-element">
+            <!-- left/right si puó mettere come id se serve -->
+            <dt>cose ippodromo</dt>
+            <dd class="flex-home">
+              <img src="images/ippodromo.jpg" class="imgContent center-element" alt="Vista aerea notturna del nostro ippodromo" />
+              <p>blah blah</p>
+            </dd>
+          </div>
+          <div class="dl-element">
+            <dt>Scommesse</dt>
+            <dd>
+              <img src="images/scommesse.jpg" alt="" /> <!-- non so se vada messa, non é molto di contenuto -->
+              <p>qui puoi fare scommesse in tempo reale ecc. ecc.</p>
+            </dd>
+          </div>
+          <div class="dl-element">
+            <dt>Valuta virtuale: Cookies</dt>
+            <dd>
+              <img src="images/cookies.jps" alt="Il simbolo della moneta é un bisotto" />
+              <!-- non so se vada messa, non é molto di contenuto -->
+              <p>Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario.
+                Otterrai
+                non so quanti cookies gratuiti se decidi di registrarti!</p>
+            </dd>
+          </div>
+        </dl>
     </main>
 
     <footer>
